kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mtapp
  labels:
    app.kubernetes.io/name: multi-tier-app
    app.kubernetes.io/managed-by: kubectl
